# autonomous_ATV

./: .gitignore  LICENSE  README.md  my_notes
ATV_models/OLD_polaris_ranger_xp900/: model.urdf
ATV_models/OLD_polaris_ranger_xp900_no_cage/: model-1_4.sdf  model.config
ATV_models/old_ATV/: quad.urdf
ATV_models/polaris_ranger_ev/: model.urdf
ATV_models/polaris_ranger_xp900_no_cage/: model.sdf
ATV_models/polaris_ranger_xp900_no_roll_cage/: model.urdf
ATV_ws/devel/: .catkin  .rosinstall  local_setup.sh  setup.sh
ATV_ws/install/: .rosinstall  _setup_util.py  local_setup.sh
ATV_ws/src/: note_to_me.txt
ATV_ws/src/action_control_unit/: CMakeLists.txt  package.xml
ATV_ws/src/action_control_unit/launch/: core_sim.launch
ATV_ws/src/action_control_unit/msg/: Movement.msg  movement.msg
ATV_ws/src/action_control_unit/nodes/: api_acu.py  custom_test.ipynb  custom_to_ackermann.py  direction.py  input_port.py
ATV_ws/src/teleop_joy/: CMakeLists.txt  package.xml
ATV_ws/src/teleop_joy/config/: other_ctrl_keys.json  ps4_keys.json
ATV_ws/src/teleop_joy/launch/: teleop_joy.launch  teleop_joy_sim_only.launch  teleop_other_joy.launch  teleop_other_joy_sim_only.launch  teleop_ps4_joy.launch  teleop_ps4_joy_sim_only.launch
ATV_ws/src/teleop_joy/nodes/: teleop_joy.py  teleop_joy_other.py  teleop_joy_other_v2.py  teleop_joy_sim_only.py  teleop_other_joy.py  teleop_other_joy_sim_only.py  teleop_ps4_joy.py  teleop_ps4_joy_sim_only.py
ATV_ws/src/teleop_joy/src/: ps4_keys.json  teleop_joy.py  teleop_joy_ps4.py  teleop_joy_ps4_v2.py  teleop_joy_sim_only.py
ATV_ws/src/teleop_key/: CMakeLists.txt  package.xml  teleop_key.py  teleop_key_incremental.py  teleop_key_incremental_v2.py
ATV_ws/src/teleop_key/launch/: teleop_key.launch  teleop_key_sim_only.launch
ATV_ws/src/teleop_key/msg/: movement.msg
ATV_ws/src/teleop_key/nodes/: teleop_key.py  teleop_key_sim_only.py
emergency_stop/devel/: .catkin  setup.sh
encoder/devel/: .catkin  local_setup.sh
movements/devel/: .catkin  local_setup.sh
others_scripts/: proximity_sensor.py  remote.py
ps4/devel/: setup.sh
start_up/: emergency.sh  main.sh  remote.sh
startup_scripts/: hello.sh  main.sh  wireless_remote.sh
(+237 files in other folders)
