<?xml version="1.0"?>
<package format="2">
  <name>action_control_unit</name>
  <version>0.0.0</version>
  <description> Midlayer between external inputs and inner simulation. Needed to convert the input in actual commands </description>
  <license>TODO</license>

  <maintainer email="giacomo.mutti@outlook.com">Giacomo Mutti</maintainer>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>

</package>
