<?xml version="1.0"?>
<package>
  <name>teleop_joy</name>
  <version>0.0.0</version>
  <description> Package for the teleopration using a ps4 controller </description>
  <license>TODO</license>

  <maintainer email="giacomo.mutti@outlook.com">Mutti Giacomo</maintainer>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>joy</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>roslaunch</build_depend>
  <build_depend>roslint</build_depend>
  <build_depend>rostest</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>joy</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>

</package>
