<?xml version="1.0"?>
<package>
  <name>teleop_key</name>
  <version>0.0.0</version>
  <description> Package for the teleopration using a keyboard </description>
  <license>TODO</license>

  <maintainer email="giacomo.mutti@outlook.com">Giacomo Mutti</maintainer>
  
  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>ATV_control</run_depend>  
  <run_depend>rospy</run_depend>

</package>
